--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,6 +36,12 @@
         <h1>{{ page.title }}</h1>
 		
 		{{ content }}
+		
+		Our animal: {{ page.animal }}
+		
+		{% if page.animal %}
+			This page has an animal: {{page.animal }}
+		{% endif %}
 
 		<hr>
 
