--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -39,8 +39,8 @@
 		
 		Our animal: {{ page.animal }}
 		
-		{% if page.animal %}
-			This page has an animal: {{page.animal }}
+		{% if page.animal=="GOAT" %}
+			We've got the greatest of all time over here
 		{% endif %}
 
 		<hr>
