--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -41,7 +41,7 @@
 		Our animal: {{ page.animal }}
 		
 		{% if page.animal=="GOAT" %}
-				<a hreft="{{ p.permalink}}"> {{p.title}} <a/a>
+				<a href="{{ p.permalink}}"> {{p.title}} <a/a>
 			{% endif %}
 		{% endfor %}
 
