--- a/_layouts/article_list.html
+++ b/_layouts/article_list.html
@@ -29,6 +29,7 @@
 	        <ul>
 				<li><a href="{{ site.baseurl }}/">HOME</a></li>
 				<li><a href="{{ site.baseurl }}/forecast">CATEGORIES</a></li>
+				<li><a href="{{ site.baseurl }}/article_list">Article</a></li>
 			</ul>
 		</nav>
 
