--- a/_layouts/article_list.html
+++ b/_layouts/article_list.html
@@ -33,23 +33,13 @@
 			</ul>
 		</nav>
 
-        <h1>{{ page.title }}</h1>
+        <h1>{{ article_list.title }}</h1>
 
 		{{ content }}
 
-		Our animal: {{ page.animal }}
+		
 
-		{% if page.animal=="GOAT" %}
-				<a href="{{ p.permalink}}"> {{p.title}} <a/a>
-			{% endif %}
-
-		<hr>
-
-		<p>Today's color is: {{ page.color }}</p>
-
-        {% if page.date %}
-    		<p>Updated {{ page.date | date: "%A, %B %-d, %Y" }}</p>
-        {% endif %}
+		
 
 	</div><!-- end container -->
 
