--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,28 +27,13 @@
 		<!-- global navbar -->
 		<nav class="global-nav">
 	        <ul>
-				<li><a href="{{ site.baseurl }}/">HOME</a></li>
+				<li><a href="{{ site.baseurl }}/page">HOME</a></li>
 				<li><a href="{{ site.baseurl }}/forecast">CATEGORIES</a></li>
 			</ul>
 		</nav>
-
-        <h1>{{ page.title }}</h1>
-
+{{page.image}}
+		
 		{{ content }}
-
-		Our animal: {{ page.animal }}
-
-		{% if page.animal=="GOAT" %}
-				<a href="{{ p.permalink}}"> {{p.title}} <a/a>
-			{% endif %}
-
-		<hr>
-
-		<p>Today's color is: {{ page.color }}</p>
-
-        {% if page.date %}
-    		<p>Updated {{ page.date | date: "%A, %B %-d, %Y" }}</p>
-        {% endif %}
 
 	</div><!-- end container -->
 
