--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -29,6 +29,7 @@
 	        <ul>
 				<li><a href="{{ site.baseurl }}/page.html">HOME</a></li>
 				<li><a href="{{ site.baseurl }}/forecast">CATEGORIES</a></li>
+				<li><a href="{{ site.baseurl }}/article_list.html">ARTICLES</a></li>
 			</ul>
 		</nav>
 {{page.image}}
