--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,7 +27,7 @@
 		<!-- global navbar -->
 		<nav class="global-nav">
 	        <ul>
-				<li><a href="{{ site.baseurl }}/page.html">HOME</a></li>
+				<li><a href="{{ site.baseurl }}/index.md">HOME</a></li>
 				<li><a href="{{ site.baseurl }}/forecast">CATEGORIES</a></li>
 				<li><a href="{{ site.baseurl }}/article_list.html">ARTICLES</a></li>
 			</ul>
