--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,9 +27,8 @@
 		<!-- global navbar -->
 		<nav class="global-nav">
 	        <ul>
-				<li><a href="{{ site.baseurl }}/index.md">HOME</a></li>
-				<li><a href="{{ site.baseurl }}/forecast">CATEGORIES</a></li>
-				<li><a href="{{ site.baseurl }}/article_list.html">ARTICLES</a></li>
+				<li><a href="{{ site.baseurl }}/index.md">Home</a></li>
+				<li><a href="{{ site.baseurl }}/article_list.html">Categories</a></li>
 			</ul>
 		</nav>
 {{page.image}}
