--- a/_layouts/article_list.html
+++ b/_layouts/article_list.html
@@ -28,8 +28,7 @@
 		<nav class="global-nav">
 	        <ul>
 				<li><a href="{{ site.baseurl }}/">HOME</a></li>
-				<li><a href="{{ site.baseurl }}/forecast">CATEGORIES</a></li>
-				<li><a href="{{ site.baseurl }}/article_list">Article</a></li>
+				<li><a href="{{ site.baseurl }}/article_list">CATEGORIES</a></li>
 			</ul>
 		</nav>
 
