--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,7 +28,7 @@
 		<nav class="global-nav">
 	        <ul>
 				<li><a href="{{ site.baseurl }}/index.md">Home</a></li>
-				<li><a href="{{ site.baseurl }}/article_list.html">Categories</a></li>
+				<li><a href="{{ site.baseurl }}/cata.html">Categories</a></li>
 			</ul>
 		</nav>
 {{page.image}}
