--- a/_layouts/article_list.html
+++ b/_layouts/article_list.html
@@ -31,7 +31,8 @@
 				<li><a href="{{ site.baseurl }}/article_list">CATEGORIES</a></li>
 			</ul>
 		</nav>
-
+{{ article_list.image }}
+		
         <h1>{{ article_list.title }}</h1>
 
 		{{ content }}
