--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,8 +31,8 @@
 				<li><a href="{{ site.baseurl }}/cata.html">Categories</a></li>
 			</ul>
 		</nav>
-{{page.image}}
-		<h1> {{page.h1}} </h1>
+ 
+		<h1>{{ page.title }}</h1>
 		
 		{{ content }}
 
