--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,7 +27,7 @@
 		<!-- global navbar -->
 		<nav class="global-nav">
 	        <ul>
-				<li><a href="{{ site.baseurl }}/index.md">Home</a></li>
+				<li><a href="{{ site.baseurl }}/page.html">Home</a></li>
 				<li><a href="{{ site.baseurl }}/cata.html">Categories</a></li>
 			</ul>
 		</nav>
