--- a/_layouts/article_list.html
+++ b/_layouts/article_list.html
@@ -27,10 +27,11 @@
 		<!-- global navbar -->
 		<nav class="global-nav">
 	        <ul>
-				<li><a href="{{ site.baseurl }}/">HOME</a></li>
-				<li><a href="{{ site.baseurl }}/article_list">CATEGORIES</a></li>
+				<li><a href="{{ site.baseurl }}/index.md">Home</a></li>
+				<li><a href="{{ site.baseurl }}/cata.html">Categories</a></li>
 			</ul>
 		</nav>
+
 {{ article_list.image }}
 		
         <h1>{{ article_list.title }}</h1>
