--- a/_layouts/specific.html
+++ b/_layouts/specific.html
@@ -27,12 +27,13 @@
 		<!-- global navbar -->
 		<nav class="global-nav">
 	        <ul>
-				<li><a href="{{ site.baseurl }}/">HOME</a></li>
-				<li><a href="{{ site.baseurl }}/forecast">CATEGORIES</a></li>
+				<li><a href="{{ site.baseurl }}/index.md">Home</a></li>
+				<li><a href="{{ site.baseurl }}/article_list.html">Article</a></li>
 			</ul>
 		</nav>
+{{ specific.image }}
 
-        <h1>{{ page.title }}</h1>
+        <h1>{{ specific.title }}</h1>
 
 		{{ content }}
 
