--- a/_layouts/specific.html
+++ b/_layouts/specific.html
@@ -25,12 +25,14 @@
 	<div class="container">
 
 		<!-- global navbar -->
+		<div class="navbar">
 		<nav class="global-nav">
 	        <ul>
 				<li><a href="{{ site.baseurl }}/index.md">Home</a></li>
 				<li><a href="{{ site.baseurl }}/article_list.html">Article</a></li>
 			</ul>
 		</nav>
+		</div>
 {{ specific.image }}
 
         <h1>{{ specific.title }}</h1>
