--- a/_layouts/specific.html
+++ b/_layouts/specific.html
@@ -28,7 +28,7 @@
 		<div class="navbar">
 		<nav class="global-nav">
 	        <ul>
-				<li><a href="{{ site.baseurl }}/index.md">Home</a></li>
+				<li><a href="{{ site.baseurl }}/index.html">Home</a></li>
 				<li><a href="{{ site.baseurl }}/article_list.html">Article</a></li>
 			</ul>
 		</nav>
