--- a/_layouts/article_list.html
+++ b/_layouts/article_list.html
@@ -24,14 +24,14 @@
 	<!-- Page content typically goes inside the container -->
 	<div class="container">
 
-		<!-- global navbar -->
+		<div class="navbar">
 		<nav class="global-nav">
 	        <ul>
-				<li><a href="{{ site.baseurl }}/index.md">Home</a></li>
-				<li><a href="{{ site.baseurl }}/cata.html">Categories</a></li>
+				<li><a href="{{ site.baseurl }}/index.html">Home</a></li>
+				<li><a href="{{ site.baseurl }}/article_list.html">Catagories</a></li>
 			</ul>
 		</nav>
-
+		</div>
 {{ article_list.image }}
 		
         <h1>{{ article_list.title }}</h1>
