--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,8 +28,7 @@
 		<nav class="global-nav">
 	        <ul>
 				<li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-				<li><a href="{{ site.baseurl }}/article_list.html">Catagories</a></li>
-			</ul>
+<li><a href="{{ site.baseurl }}/cata.html">Categories</a></li>			</ul>
 		</nav>
 		</div>
 		<h1>{{ page.title }}</h1>
